[package]
name = "http-to-https"
edition = "2018"
version = "0.0.0"

[dependencies]
failure = "0.1.6"
hyper = "0.13.1"
tokio = { version = "0.2.9", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2.0"
tracing-subscriber = "0.2.0-alpha.2"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
